templates/cloud-native-java_template.yaml
---
# Source: cloud-native-java/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-cloud-native-java
  labels:
    helm.sh/chart: cloud-native-java-0.1.0
    app.kubernetes.io/name: cloud-native-java
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  sessionAffinity: None
  type: ClusterIP
  selector:
    app.kubernetes.io/name: cloud-native-java
    app.kubernetes.io/instance: release-name
---
# Source: cloud-native-java/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-cloud-native-java
  labels:
    helm.sh/chart: cloud-native-java-0.1.0
    app.kubernetes.io/name: cloud-native-java
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: cloud-native-java
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cloud-native-java
        app.kubernetes.io/instance: release-name
    spec:
      containers:
        - name: cloud-native-java
          image: "quay.io/mcouliba/quarkus-serverless:1.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources: {}
---
# Source: cloud-native-java/templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: release-name-cloud-native-java
  labels:
    helm.sh/chart: cloud-native-java-0.1.0
    app.kubernetes.io/name: cloud-native-java
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: release-name-cloud-native-java
    weight: 100
  wildcardPolicy: None
---
# Source: cloud-native-java/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-cloud-native-java-test-connection"
  labels:
    helm.sh/chart: cloud-native-java-0.1.0
    app.kubernetes.io/name: cloud-native-java
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['release-name-cloud-native-java:8080']
  restartPolicy: Never
